Changelog
=========

0.2 (unreleased)
----------------

- ...

0.1 (2010-05-16)
----------------

- Initial release