@@ -31,10 +31,10 @@ We can now check the new highest versions:
 >>> from z3c.checkversions import buildout
 >>> checker = buildout.Checker(filename=buildout_path)
 >>> checker.get_versions()
-Checking buildout file ...
+# Checking buildout file ...
 {'zope.interface': '3.4.0', 'zope.component': '3.4.0'}
 >>> checker.check()
-Checking buildout file ...
+# Checking buildout file ...
 Reading file:///.../zope.interface/
 zope.interface=3.6.1
 Reading file:///.../zope.component/
@@ -43,18 +43,30 @@ zope.component=3.9.4
 We can check only the minor versions:
 
 >>> checker.check(level=2)
-Checking buildout file ...
+# Checking buildout file ...
 zope.interface=3.4.1
 
 We can provide a different index url:
 
 >>> checker = buildout.Checker(filename=buildout_path, index_url=testindex2)
 >>> checker.check()
-Checking buildout file ...
+# Checking buildout file ...
 Reading file:///.../zope.interface/
 zope.interface=3.6.2
 Reading file:///.../zope.component/
 zope.component=3.9.3
+
+The verbose mode gives the current and previous versions
+
+>>> checker = buildout.Checker(filename=buildout_path, verbose=True)
+>>> checker.check(level=2)
+# Checking buildout file ...
+Reading file:///.../zope.interface/
+zope.interface=3.4.1 # was: 3.4.0
+Reading file:///.../zope.component/
+zope.component=3.4.0
+
+
 
 console script
 --------------
