@@ -8,7 +8,7 @@ We just check we can get the versions:
 
 >>> from pprint import pprint
 >>> versions = checker.get_versions()
-Checking your installed distributions
+# Checking your installed distributions
 >>> 'z3c.checkversions' in versions
 True
 
